# routes/settings.js
@@ -24,4 +24,13 @@ router.post('/update', async(req, res) => {
     }
 });
 
+router.get('/get-cms', async(req, res) => {
+    try {
+        let response = await settingsHandler.getCms(req.query, req);
+        jsonResponse(res, responseCodes.OK, null, response);
+    } catch (error) {
+        jsonResponse(res, error.code, error, null);
+    }
+});
+
 module.exports = router;
